--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -96,7 +96,7 @@
 
       <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
 
-      <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid" (click)="$event.stopPropagation()">
+      <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">
         S'inscrire
       </button>
       
