--- a/src/app/components/comptes/comptes.component.css
+++ b/src/app/components/comptes/comptes.component.css
@@ -183,3 +183,11 @@
   border-radius: 4px;
   margin-bottom: 1rem;
 }
+
+.success-message {
+  background-color: #d1fae5;
+  color: #065f46;
+  padding: 1rem;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+}
