--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -179,7 +179,7 @@
           <button type="button" class="btn btn-secondary" (click)="closeForms()">Fermer</button>
           <button type="submit" class="btn btn-primary" [disabled]="releveForm.invalid">Afficher</button>
           <button type="button" class="btn btn-success" (click)="imprimerReleve()" [disabled]="releveForm.invalid || releveTransactions.length === 0">
-            Imprimer
+            Télécharger PDF
           </button>
         </div>
       </form>
